# AP-CoreTypes

./: .travis.yml  README.md  gcovr.cfg  meson.build
include/ara/: exposition.h
include/ara/core/: allocator.h  array.h  byte.h  core_error_domain.h  error_code.h  error_domain.h  exception.h  map.h  result.h  string_view.h  utility.h  vector.h
src/: dummy.cpp  meson.build
src/ara/core/: core_error_domain.cpp  exception.cpp
tests/: array_test.cpp  byte_test.cpp  core_error_domain_test.cpp  error_domain_test.cpp  map_test.cpp  meson.build  result_test.cpp  utility_test.cpp  vector_test.cpp
tools/: build_ci.sh
